--- a/St78693HTML.html
+++ b/St78693HTML.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
 
-<body>
+<body class=" grad">
 
         <div class="centertext colorRed">
             <script src="js/scripts.js"></script>
